--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="flex flex-col md:flex-row gap-16 items-center">
                 <div class="md:w-1/2 relative">
                     <div class="border border-brand-gold/30 p-4 relative">
-                        <img src="https://images.unsplash.com/photo-1626818165780-255d6445b290?q=80&w=800&auto=format&fit=crop" alt="Cigar Rolling" class="w-full grayscale hover:grayscale-0 transition-all duration-700 shadow-2xl sepia-[.25]">
+                        <img src="mahakarya.png" alt="Cigar Rolling" class="w-full grayscale hover:grayscale-0 transition-all duration-700 shadow-2xl sepia-[.25]">
                         <div class="absolute -top-3 -left-3 w-16 h-16 border-t-2 border-l-2 border-brand-gold"></div>
                         <div class="absolute -bottom-3 -right-3 w-16 h-16 border-b-2 border-r-2 border-brand-gold"></div>
                     </div>
@@ -247,7 +247,7 @@
                     <div class="absolute top-4 right-4 text-brand-gold/10 font-display text-6xl font-bold -z-0 group-hover:text-brand-gold/20 transition-colors">I</div>
                     <div class="relative z-10 flex flex-col h-full">
                         <div class="h-64 mb-8 bg-gradient-to-b from-[#0F2622] to-brand-dark flex items-center justify-center p-4">
-                            <img src="https://images.unsplash.com/photo-1521302392473-b34cb9413247?q=80&w=600&auto=format&fit=crop" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series I">
+                            <img src="1.png" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series I">
                         </div>
                         <h3 class="font-display text-2xl text-white mb-2">Helvetia Series I</h3>
                         <p class="text-gray-400 text-sm mb-6 leading-relaxed">
@@ -265,7 +265,7 @@
                     <div class="absolute top-4 right-4 text-brand-gold/10 font-display text-6xl font-bold -z-0 group-hover:text-brand-gold/20 transition-colors">II</div>
                     <div class="relative z-10 flex flex-col h-full">
                         <div class="h-64 mb-8 bg-gradient-to-b from-[#0F2622] to-brand-dark flex items-center justify-center p-4">
-                            <img src="https://images.unsplash.com/photo-1550955217-03cb68249764?q=80&w=600&auto=format&fit=crop" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series II">
+                            <img src="2.png" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series II">
                         </div>
                         <h3 class="font-display text-2xl text-white mb-2">Helvetia Series II</h3>
                         <p class="text-gray-400 text-sm mb-6 leading-relaxed">
@@ -283,7 +283,7 @@
                     <div class="absolute top-0 right-0 bg-brand-gold text-brand-dark text-[10px] font-bold px-3 py-1 uppercase tracking-widest">Flagship</div>
                     <div class="relative z-10 flex flex-col h-full">
                         <div class="h-64 mb-8 flex items-center justify-center p-4">
-                            <img src="https://plus.unsplash.com/premium_photo-1661331778931-15b706c36199?q=80&w=600&auto=format&fit=crop" class="max-h-full object-contain drop-shadow-2xl group-hover:rotate-1 transition-transform duration-500" alt="Helvetia Premium">
+                            <img src="3.png" class="max-h-full object-contain drop-shadow-2xl group-hover:rotate-1 transition-transform duration-500" alt="Helvetia Premium">
                         </div>
                         <h3 class="font-display text-3xl text-brand-gold mb-2">Helvetia Premium</h3>
                         <p class="text-gray-300 text-sm mb-6 leading-relaxed">
@@ -300,7 +300,7 @@
                 <div class="group bg-brand-dark p-8 border border-white/5 hover:border-brand-gold/50 transition-all duration-500 relative overflow-hidden md:col-span-2 lg:col-span-1 shadow-lg">
                     <div class="relative z-10 flex flex-col h-full">
                         <div class="h-64 mb-8 bg-gradient-to-b from-[#0F2622] to-brand-dark flex items-center justify-center p-4">
-                            <img src="https://images.unsplash.com/photo-1629821817540-c3d32d0f3984?q=80&w=600&auto=format&fit=crop" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Saentis">
+                            <img src="4.png" class="max-h-full object-contain drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Saentis">
                         </div>
                         <h3 class="font-display text-2xl text-white mb-2">Saentis</h3>
                         <p class="text-gray-400 text-sm mb-6 leading-relaxed">
