--- a/products.html
+++ b/products.html
@@ -127,7 +127,7 @@
             <div class="relative group">
                 <div class="absolute inset-4 border border-brand-gold/30 rounded-sm -z-10 group-hover:inset-0 transition-all duration-700"></div>
                 <div class="bg-gradient-to-b from-[#1a3a35] to-brand-dark p-8 rounded-sm flex items-center justify-center aspect-[4/3] shadow-2xl">
-                    <img src="https://images.unsplash.com/photo-1521302392473-b34cb9413247?q=80&w=800&auto=format&fit=crop" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series 1">
+                    <img src="1.png" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series 1">
                 </div>
             </div>
             
@@ -235,7 +235,7 @@
             <div class="relative group order-1 lg:order-2">
                 <div class="absolute inset-4 border border-brand-gold/30 rounded-sm -z-10 group-hover:inset-0 transition-all duration-700"></div>
                 <div class="bg-gradient-to-b from-[#1a3a35] to-brand-dark p-8 rounded-sm flex items-center justify-center aspect-[4/3] shadow-2xl">
-                    <img src="https://images.unsplash.com/photo-1550955217-03cb68249764?q=80&w=800&auto=format&fit=crop" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series 2">
+                    <img src="2.png" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Helvetia Series 2">
                 </div>
             </div>
         </article>
@@ -249,7 +249,7 @@
                 <div class="absolute -inset-1 bg-gradient-to-r from-brand-gold/20 via-transparent to-brand-gold/20 rounded-lg blur opacity-30"></div>
                 <div class="absolute inset-4 border border-brand-gold rounded-sm -z-10 group-hover:inset-0 transition-all duration-700"></div>
                 <div class="bg-gradient-to-br from-[#2a2415] to-brand-dark p-8 rounded-sm flex items-center justify-center aspect-[4/3] shadow-2xl border border-brand-gold/20">
-                    <img src="https://plus.unsplash.com/premium_photo-1661331778931-15b706c36199?q=80&w=800&auto=format&fit=crop" class="w-3/4 drop-shadow-2xl group-hover:rotate-1 transition-transform duration-500" alt="Helvetia Premium">
+                    <img src="3.png" class="w-3/4 drop-shadow-2xl group-hover:rotate-1 transition-transform duration-500" alt="Helvetia Premium">
                 </div>
             </div>
             
@@ -360,7 +360,7 @@
             <div class="relative group order-1 lg:order-2">
                 <div class="absolute inset-4 border border-brand-gold/30 rounded-sm -z-10 group-hover:inset-0 transition-all duration-700"></div>
                 <div class="bg-gradient-to-b from-[#1a3a35] to-brand-dark p-8 rounded-sm flex items-center justify-center aspect-[4/3] shadow-2xl">
-                    <img src="https://images.unsplash.com/photo-1629821817540-c3d32d0f3984?q=80&w=800&auto=format&fit=crop" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Saentis">
+                    <img src="4.png" class="w-3/4 drop-shadow-2xl opacity-90 group-hover:scale-105 transition-transform duration-500" alt="Saentis">
                 </div>
             </div>
         </article>
