--- a/tentangkami.html
+++ b/tentangkami.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="order-1 lg:order-2 relative">
                         <div class="absolute -inset-4 border border-brand-gold/20 rounded-sm"></div>
-                        <img src="https://images.unsplash.com/photo-1594315270275-58000490df1b?q=80&w=800&auto=format&fit=crop" class="w-full h-auto rounded-sm shadow-2xl relative z-10" alt="Perkebunan PTPN">
+                        <img src="ptpn.png" class="w-full h-auto rounded-sm shadow-2xl relative z-10" alt="Perkebunan PTPN">
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
             <div class="container mx-auto px-6 relative z-10">
                 <div class="flex flex-col md:flex-row gap-16 items-center">
                     <div class="md:w-1/2">
-                        <img src="https://images.unsplash.com/photo-1629821817540-c3d32d0f3984?q=80&w=800&auto=format&fit=crop" alt="Cerutu Deli Nusantara" class="rounded-sm shadow-2xl border-l-4 border-brand-gold">
+                        <img src="cerutu.jpg" alt="Cerutu Deli Nusantara" class="rounded-sm shadow-2xl border-l-4 border-brand-gold">
                     </div>
                     <div class="md:w-1/2">
                         <h2 class="font-serif text-3xl md:text-4xl text-white mb-6">Lahirnya Sebuah Mahakarya</h2>
